syntax = "proto3";
package edgenode;


service PubSub {
    rpc Connect(Url) returns (Id) {};
    rpc Publish(stream Image) returns (Status) {}  
    rpc Subscribe(ImageStreamParameters) returns (stream Image) {}
    rpc Unsubscribe(CameraInfo) returns (Status) {} 
    rpc LatencyCalc(LatencyMeasured) returns (Status) {};
}

message Url {
    string address = 1;
}

message Id {
    string id = 1;
}

message Image {
    bytes image = 1;
    string timestamp = 2;
}

message CameraInfo {
   repeated  string camid = 1;
}

message ImageStreamParameters {
    string camid = 1;
    string latency = 2;
    string accuracy = 3;
    string start = 4;
    string stop = 5;
}

message Status {
    bool status = 1;
}

message LatencyMeasured{
    string current_lat = 1;
}